--- a/app/views/announcements/new.html.slim
+++ b/app/views/announcements/new.html.slim
@@ -1,4 +1,6 @@
 - title t("new_announcement")
+- content_for(:page_classes, "no-recent-reports")
+
 header.page-header
   .container
     .page-header__container
