--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -5,12 +5,14 @@
       = f.label :login_name, class: "a-sm-label is-required"
       = f.text_field :login_name, class: "a-sm-text-input", autocomplete: :off
       .auth-form-item__help
-        p = t("login_name_description")
+        p
+          | チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
     .auth-form-item
       = f.label :email, class: "a-sm-label is-required"
       = f.text_field :email, class: "a-sm-text-input"
       .auth-form-item__help
-        p = t("email_description")
+        p
+          | このメールアドレスは卒業後の連絡にも使うので、会社で提供されたなどの第三者によって提供されたメールアドレスではなく、転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
     .auth-form-item
       .row
         .col-xs-6
@@ -21,15 +23,18 @@
           .auth-form-item
             = f.label :first_name, class: "a-sm-label is-required"
             = f.text_field :first_name, class: "a-sm-text-input"
+      .auth-form-item__help
+        p
+          | 就職希望先企業の採用担当者も使う情報になるので、姓・名は必ず本名を入力してください。
     .auth-form-item
       = f.label :description, class: "a-sm-label is-required"
       = f.text_area :description, class: "a-sm-text-input", size: "10x10"
     .auth-form-item
-      = f.label :github_account, class: "a-sm-label"
-      = f.text_field :github_account, class: "a-sm-text-input"
-    .auth-form-item
       = f.label :slack_account, class: "a-sm-label"
       = f.text_field :slack_account, class: "a-sm-text-input"
+    .auth-form-item
+      = f.label :github_account, class: "a-sm-label"
+      = f.text_field :github_account, class: "a-sm-text-input"
     .auth-form-item
       = f.label :twitter_account, class: "a-sm-label"
       = f.text_field :twitter_account, class: "a-sm-text-input"
