--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -24,6 +24,10 @@ header.header
               = link_to admin_root_path, class: "header-links__link #{current_link /^admin/}" do
                 i.fab.fa-font-awesome-flag
                 .header-links__link-label 管理
+            li.header-links__item
+              = link_to "https://github.com/fjordllc/bootcamp/projects/1", class: "header-links__link", target: "_blank" do
+                i.fab.fa-github-alt
+                .header-links__link-label GitHub
           li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
             .header-links__link.js-drop-down__trigger.test-bell
               .header-notification-icon
