Google Tag ManagerをProductionのみ表示に変更
他環境でJSエラーが出るため

--- a/app/views/application/_google_tag_manager_head.html.erb
+++ b/app/views/application/_google_tag_manager_head.html.erb
@@ -1,3 +1,4 @@
+<% if Rails.env.production? %>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -15,3 +16,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'UA-2927688-17');
 </script>
+<% end %>
