--- a/app/views/application/_google_tag_manager_body.html.erb
+++ b/app/views/application/_google_tag_manager_body.html.erb
@@ -1,4 +1,6 @@
+<% if Rails.env.production? %>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K7LR8JT"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+<% end %>
