--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -48,29 +48,7 @@ header.page-header
       .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
         = @practice.goal
       footer.practice-content__footer
-        .practice-content-actions
-          - unless @practice.submission
-            p.practice-content-actions__description
-              | このプラクティスに提出物は不要です。
-              br
-              | 終了条件をクリアしたら完了をクリック！
-          ul.practice-content-actions__items
-            - if @practice.submission
-              - if @practice.product(current_user).present?
-                li.practice-content-actions__item
-                  = link_to [@practice, @practice.product(current_user)], class: "is-button-simple-md-primary" do
-                    i.fas.fa-file
-                    | 提出物
-              - else
-                li.practice-content-actions__item
-                  = link_to new_practice_product_path(@practice), class: "is-button-simple-md-primary" do
-                    i.fas.fa-file
-                    | 提出物を作る
-            - if @practice.not_completed?(current_user)
-              li.practice-content-actions__item
-                = link_to practice_learning_path(@practice), method: :put, class: "is-button-simple-md-warning" do
-                  i.fas.fa-check
-                  | 完了
+        #js-learning(data-practice-id="#{@practice.id}")
 
   .form-actions
     ul.form-actions__items
