アドバイザー用にフォームの文言変更

--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,9 +1,12 @@
-- content_for(:page_classes, "no-header no-footer no-recent-reports no-global-nav")
+- content_for(:page_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page")
 
 .auth-form.is-sign-up
   header.auth-form__header
     h1.auth-form__title
-      = t("sign_up")
+      -if params[:role] == "adviser"
+        | アドバイザー登録
+      -else
+        = t("sign_up")
   .auth-form__body
     = render "form", user: @user, companies: @companies
   footer.auth-form__footer
