--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -89,7 +89,10 @@
     ul.auth-form-action__items
       - if %w(new create).include? params[:action]
         li.auth-form-action__item
-          = f.submit "参加する", class: "is-button-simple-md-warning js-sign-up-action"
+          -if params[:role] == "adviser"
+            = f.submit "アドバイザー登録", class: "is-button-simple-md-warning js-sign-up-action"
+          -else
+            = f.submit "参加する", class: "is-button-simple-md-warning js-sign-up-action"
       - else
         li.auth-form-action__item
           = link_to user_path, class: "is-button-simple-xs-secondary" do
