hidden_fieldを間違えて消してた

--- a/app/views/application/_pp.slim
+++ b/app/views/application/_pp.slim
@@ -7,9 +7,9 @@ p
 
 h3 個人情報保護管理責任者
 p
-  | 〒151-0071
+  | 〒156-0043
   br
-  | 東京都渋谷区本町1-36-11ドエルヤマト 203
+  | 東京都世田谷区松原２丁目３４−１１ ベルヴィカワダ 201号室
   br
   | 個人情報保護管理責任者
 
