--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -6,7 +6,7 @@ section.welcome-section.is-administrator#administrator
       | 合同会社フィヨルド
     .welcome-section__description.is-reversal.js-mojik
       p
-        | 東京の初台にある合同会社フィヨルドという会社です。自社で運営しているサービスを開発しながら、お客様からお金をいただいてお客様のシステムを開発する仕事（受託開発）をしています。
+        | 東京の明大前駅にある合同会社フィヨルドという会社です。自社で運営しているサービスを開発しながら、お客様からお金をいただいてお客様のシステムを開発する仕事（受託開発）をしています。
     section.welcome-child-section
       h3.welcome-child-section__title.is-reversal
         | メンター
