--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -66,7 +66,10 @@
       .thread-admin-tools
         ul.thread-admin-tools__items
           li.thread-admin-tools__item
-            = render "reports/report_check_form"
+            = form_for @check, html: { class: "report-check-form" } do |f|
+              = hidden_field_tag :user_id, current_user.id
+              = hidden_field_tag :report_id, @report.id
+              = f.submit t("check_report"), class: "report-check-form__action is-button-simple-md-danger"
 
   .thread-prev-next
     .thread-prev-next__item
