productもフラットなURLで編集できるように修正
あとでcourseが入った時に問題にならないように。

--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -1,8 +1,10 @@
+- title "コメント編集"
+- content_for(:page_classes, "no-recent-reports")
+
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
-        = t("editing_comment")
+      h2.page-header__title = title
 
 .page-body
   .container
