--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -25,10 +25,10 @@
       .thread-edit-tools
         ul.thread-edit-tools__items
           li.thread-edit-tools__item
-            = link_to edit_practice_product_path(product.practice), class: "thread-edit-tools__item-link is-success" do
+            = link_to edit_product_path(product), class: "thread-edit-tools__item-link is-success" do
               i.fas.fa-pen
           li.thread-edit-tools-item
-            = link_to practice_product_path(product.practice), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
+            = link_to product, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
               i.fas.fa-trash-alt
 
     - if (admin_login? || adviser_login?) && product.checks.blank?
