--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -12,7 +12,7 @@ header.page-header
       .form-actions
         ul.form-actions__items
           li.form-actions__item
-            = link_to edit_practice_product_path(@product.practice), class: "form-actions__item-link is-button-simple-lg-warning" do
+            = link_to edit_product_path(@product), class: "form-actions__item-link is-button-simple-lg-warning" do
               | 提出物の内容更新
     - if @footprints.any?
       .footprints
