--- a/app/views/products/edit.html.slim
+++ b/app/views/products/edit.html.slim
@@ -1,7 +1,10 @@
+- title "提出物編集"
+- content_for(:page_classes, "no-recent-reports")
+
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title 提出物編集
+      h2.page-header__title = title
 .page-body
   .container
-    = render "form", product: @product
+    = render "form", practice: @practice, product: @product
