--- a/app/views/users/comments/index.html.slim
+++ b/app/views/users/comments/index.html.slim
@@ -12,4 +12,4 @@ header.page-header
 .page-body
   .container
     = paginate @comments, position: "top"
-    = render "comments/comments", comments: @comments, form_visible: false
+    = render "comments/comments", comments: @comments
