ダッシュボードのテスト追加

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,9 @@
+- title "ダッシュボード"
+
+header.page-header
+  .container
+    .page-header__container
+      h2.page-header__title = title
 .page-body
   .top-page
     .container
