reportページのcommentの並びがおかしかったのを修正
commentはものによって並びが違うのでdefault_orderを廃止。
実装するときにしっかりと並びを意識できるようにするため。

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -7,7 +7,7 @@ header.page-header
 .page-body
   .container
     = render "product", product: @product
-    = render "comments/comments", comments: @product.comments.default_order.page(params[:page]), form_visibility: true
+    = render "comments/comments", comments: @product.comments.order(created_at: :desc).page(params[:page]), form_visibility: true
     - if @product.user == current_user
       .form-actions
         ul.form-actions__items
