--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -40,7 +40,7 @@
         = f.text_area :description, class: "a-sm-text-input", placeholder: "月・水・金の 10:00 〜 19:00 に活動します。"
     .auth-form-item
       = f.label :slack_account, class: "a-sm-label"
-      = f.text_field :slack_account, class: "a-sm-text-input"
+      = f.text_field :slack_account, class: "a-sm-text-input", placeholder: "komagata"
     .auth-form-item
       = f.label :github_account, class: "a-sm-label"
       = f.text_field :github_account, class: "a-sm-text-input", placeholder: "komagata"
