--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -3,8 +3,8 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title ユーザー一覧
-= render "/admin/admin_page_tabs", active: 1
+= render "admin/admin_page_tabs", active: 1
 .page-body
   = render "nav"
   .container.is-padding-horizontal-0-sm-down
-    = render "/admin/users/admin_users_table", users: @users
+    = render "admin/users/admin_users_table", users: @users
