--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -14,7 +14,12 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-label
               = t("announcements")
         li.global-nav-links__item
-          = link_to practices_path, class: "global-nav-links__link #{current_link /^practices/}" do
+          = link_to courses_path, class: "global-nav-links__link #{current_link /^courses-index/}" do
+            .global-nav-links__link-icon
+              i.fas.fa-book
+            .global-nav-links__link-label コース
+        li.global-nav-links__item
+          = link_to course_practices_path(current_user.course), class: "global-nav-links__link #{current_link /^(courses-practices|practices)-/}" do
             .global-nav-links__link-icon
               i.fas.fa-book
             .global-nav-links__link-label
