--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -4,9 +4,15 @@
     .form-item
       .row
         .col-md-6.col-xs-12
+          = label_tag "course", "コース", class: "a-label"
+          .is-button-simple-md-secondary.is-select.is-block
+            = select_tag "course", options_for_select(Course.order(:created_at).map { |c| [c.title, c.id] }), id: "course_id"
+    .form-item
+      .row
+        .col-md-6.col-xs-12
           = f.label :category_id, class: "a-label"
           .is-button-simple-md-secondary.is-select.is-block
-            = f.collection_select :category_id, Category.all, :id, :name, {}
+            = f.select :category_id, [], id: "category_id"
     .form-item
       .row
         .col-md-6.col-xs-12
@@ -40,7 +46,4 @@
       li.form-actions__item.is-main
         = f.submit nil, class: "is-button-simple-lg-warning is-block"
       li.form-actions__item
-        - if params[:action] == "new" || params[:action] == "create"
-          = link_to "キャンセル", practices_path, class: "is-button-simple-md-secondary"
-        - elsif params[:action] == "edit" || params[:action] == "update"
-          = link_to "キャンセル", practice_path, class: "is-button-simple-md-secondary"
+        = link_to "キャンセル", :back, class: "is-button-simple-md-secondary"
