--- a/app/views/practices/questions/index.html.slim
+++ b/app/views/practices/questions/index.html.slim
@@ -1,9 +1,8 @@
-- title @practice.title
+- title "#{@practice.title}の質問"
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
-        = @practice.title
+      h2.page-header__title = title
       .page-header__action
         = link_to practices_path, class: "is-button-simple-md-secondary" do
           i.fa.fa-angle-left
