--- a/app/views/users/comments/index.html.slim
+++ b/app/views/users/comments/index.html.slim
@@ -1,8 +1,8 @@
-- title @user.login_name
+- title "#{@user.login_name}のコメント"
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title = @user.login_name
+      h2.page-header__title = title
       ul.page-header-actions__items
         li.page-header-actions__item
           = link_to "ユーザー一覧", users_path, class: "is-button-simple-md-secondary"
