--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -11,6 +11,8 @@ header.page-header.is-margin-bottom-0.has-border-bottom-none
               i.fas.fa-plus
               | 日報作成
 
+= render "reports/tabs"
+
 nav.sort-nav
   .container
     .sort-nav__inner
