--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -16,7 +16,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
         li.global-nav-links__item
           = link_to courses_path, class: "global-nav-links__link #{current_link /^courses-index/}" do
             .global-nav-links__link-icon
-              i.fas.fa-book
+              i.fas.fa-book-open
             .global-nav-links__link-label コース
         li.global-nav-links__item
           = link_to course_practices_path(current_user.course), class: "global-nav-links__link #{current_link /^(courses-practices|practices)-/}" do
