graduated_atをgraduated_onに変更
datetimeからdateに変更があったので

--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -22,7 +22,7 @@
               | アドバイザー
             - elsif user.retire?
               | リタイア
-            - elsif user.graduation
+            - elsif user.graduated_on?
               | 卒業生
             - elsif user.active?
               | 現役生
