--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -64,16 +64,8 @@
         p
           = t("we_will_find_rails_job_by_our_best")
     .auth-form-item
-      = f.label :graduation, class: "a-sm-label"
-      ul.auth-form-item__checkboxes
-        li.auth-form-checkbox
-          label.auth-form-checkbox__label
-            = f.check_box :graduation, class: "auth-form-checkbox__input"
-            = User.human_attribute_name :graduation
-    .auth-form-item
-      = f.label :graduated_at, class: "a-sm-label"
-      = f.text_field :graduated_at, class: "a-sm-text-input",
-                      placeholder: "1999-12-31"
+      = f.label :graduated_on, class: "a-sm-label"
+      = f.text_field :graduated_on, class: "datepicker a-text-input"
     .auth-form-item
       = f.label :adviser, class: "a-sm-label"
       ul.auth-form-item__checkboxes
