--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -8,6 +8,7 @@ html.is-admin lang="ja"
     title #{page_title.present? ? page_title + " - " : ""}Fjord Bootcamp
     = render "favicons"
     = stylesheet_link_tag "application", media: "all"
+    = stylesheet_link_tag "//cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     = javascript_include_tag "application"
     = javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js", integrity: "sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==", crossorigin: "anonymous"
     = javascript_pack_tag "application"
