コースのデザインとそれに伴うパーツを共通化

--- a/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
@@ -24,6 +24,8 @@
   margin-top: .5rem
   p
     +text-block(.75rem 1.5)
+  a
+    +hover-link-reversal
 
 .auth-form-item__help-link
   +text-block(.75rem 1.5)
