--- a/app/assets/stylesheets/blocks/course/_courses.sass
+++ b/app/assets/stylesheets/blocks/course/_courses.sass
@@ -1,9 +1,22 @@
-.courses-items
-  display: flex
-
 .courses-item
-  flex-direction: row
-  border: 1px solid #000
-  padding: 4rem
-  margin: 1rem
+  padding-bottom: 1.25rem
+  height: 100%
 
+.courses-item__inner
+  height: 100%
+
+.courses-item__header
+  padding: 1.25rem 1.25rem 0
+
+.courses-item__title
+  +text-block(1.125rem 1.4)
+
+.courses-item__title-link
+  display: block
+  color: $main-color
+  +hover-link
+
+.courses-item__description
+  padding: .5rem 1.25rem 1.25rem
+  p
+    +text-block(.8125rem 1.6)
