--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -47,6 +47,10 @@
   .thread-list-item.is-wip &
     color: $muted-text
 
+.thread-list-item__sub-title
+  +text-block(.75rem 1.4, $muted-text 400)
+  +margin(vertical, .25rem .125rem)
+
 .thread-list-item__actions
   margin-left: .5rem
   display: flex
