--- a/app/assets/stylesheets/blocks/user/_user-profile.sass
+++ b/app/assets/stylesheets/blocks/user/_user-profile.sass
@@ -21,7 +21,7 @@
   +word-wrap
 
 .user-profile__full-name
-  +text-block(.875rem 1.45, 400)
+  +text-block(.875rem 1.45 .5rem, 400)
 
 .user-profile__company-name
   +text-block(.875rem 1.45, 400)
