--- a/app/assets/stylesheets/blocks/practice/_practice-content-actions.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice-content-actions.sass
@@ -12,6 +12,7 @@
   +padding(horizontal, .375rem)
   > *
     width: 160px
+    max-width: 100%
   +media-breakpoint-down(sm)
     width: 100%
     +padding(horizontal, 0)
