--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -3,7 +3,7 @@
   .thread-comment__author
     = link_to comment.user, itempro: "url", class: "thread-comment__author-link" do
       = gravatar_tag comment.user, secure: true, size: 200, html: { class: "thread-comment__author-icon" }
-  .thread-comment__body
+  .thread-comment__body.a-card
     header.thread-comment__body-header
       h2.thread-comment__title
         = link_to comment.user, itempro: "url", class: "thread-comment__title-link" do
@@ -13,11 +13,14 @@
     .thread-comments__description.js-markdown-view.js-target-blank.is-long-text-style
       = comment.description
     - if comment.user == current_user
-      .thread-comment__actions
-        ul.thread-comment__actions-items
-          li.thread-comment__actions-item
-            = link_to edit_comment_path(comment), class: "thread-comment__actions-item-link" do
-              i.fas.fa-pen
-          li.thread-comment__actions__item
-            = link_to comment, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "thread-comment__actions-item-link" do
-              i.fas.fa-trash-alt
+      footer.card-footer
+        .card-footer-actions
+          ul.card-footer-actions__items
+            li.card-footer-actions__item
+              = link_to edit_comment_path(comment), class: "card-footer-actions__action is-button-simple-md-primary is-block" do
+                i.fas.fa-pen
+                | 編集
+            li.card-footer-actions__item
+              = link_to comment, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action is-button-simple-md-danger is-block" do
+                i.fas.fa-trash-alt
+                | 削除
