--- a/app/views/courses/index.html.slim
+++ b/app/views/courses/index.html.slim
@@ -14,4 +14,5 @@ header.page-header
 .page-body
   .container
     .courses-items
-      = render @courses.order(:created_at)
+      .row
+        = render @courses.order(:created_at)
