--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -12,46 +12,53 @@ header.page-header
                 i.fas.fa-plus
                 = t("new_practice")
           li.page-header-actions__item
-            = link_to practices_path, class: "is-button-simple-md-secondary" do
+            = link_to course_practices_path(current_user.course), class: "is-button-simple-md-secondary" do
               i.fas.fa-angle-left
-              = t("practices")
+              | プラクティス一覧
 
 = render "page_tabs", resource: @practice
 
 .container
   .practice-contents
-    section.practice-content
-      header.practice-content__header
-        h2.practice-content__title = t("helpers.label.practice.description")
+    section.practice-content.a-card
+      header.practice-content__header.card-header
+        h2.practice-content__title
+          = t("helpers.label.practice.description")
       .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
         = @practice.description
-      footer.practice-content__footer
-        .practice-content-actions
-          ul.practice-content-actions__items
-            li.practice-content-actions__item
-              = link_to new_question_path, class: "is-button-simple-md-primary" do
+      footer.card-footer
+        .card-footer-actions
+          ul.card-footer-actions__items
+            li.card-footer-actions__item
+              = link_to new_question_path, class: "is-button-simple-md-primary is-block" do
                 i.fas.fa-question-circle
                 | 質問する
 
-    section.practice-content
-      header.practice-content__header
-        h2.practice-content__title = t("helpers.label.practice.goal")
+    section.practice-content.a-card
+      header.practice-content__header.card-header
+        h2.practice-content__title
+          = t("helpers.label.practice.goal")
       .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
         = @practice.goal
-      footer.practice-content__footer
+      footer.card-footer
         #js-learning(data-practice-id="#{@practice.id}")
 
-  .form-actions
-    ul.form-actions__items
-      li.form-actions__item
-        = link_to edit_practice_path(@practice), class: "is-button-simple-md-primary" do
-          i.fas.fa-pen
-          = t("edit")
-      - if current_user.admin?
-        li.form-actions__item
-          = link_to practice_path(@practice), data: { confirm: t("are_you_sure") }, method: :delete, class: "is-button-simple-md-danger" do
-            i.fas.fa-trash-alt
-            = t("destroy")
+    - if current_user.admin?
+      section.practice-content.a-card
+        header.practice-content__header.card-header
+          h2.practice-content__title
+            | 管理者メニュー
+        footer.card-footer
+          .card-footer-actions
+            ul.card-footer-actions__items
+              li.card-footer-actions__item
+                = link_to edit_practice_path(@practice), class: "is-button-simple-md-primary is-block" do
+                  i.fas.fa-pen
+                  = t("edit")
+              li.card-footer-actions__item
+                = link_to practice_path(@practice), data: { confirm: t("are_you_sure") }, method: :delete, class: "is-button-simple-md-danger is-block" do
+                  i.fas.fa-trash-alt
+                  = t("destroy")
 
   .interns-icons
     h2.user-reports__title
