--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -1,5 +1,5 @@
 .thread
-  .thread__inner
+  .thread__inner.a-card
     header.thread-header
       .thread-header__reported-at
         | #{l report.reported_on, format: :long} の日報
@@ -49,18 +49,21 @@
         = report.description
 
       - if @report.user_id == current_user.id
-        .thread-edit-tools
-          .thread-edit-tools__inner
-            ul.thread-edit-tools__items
-              li.thread-edit-tools__item
-                = link_to edit_report_path(report), class: "thread-edit-tools__item-link is-success", id: "js-shortcut-edit" do
+        .card-footer
+          .card-footer-actions
+            ul.card-footer-actions__items
+              li.card-footer-actions__item
+                = link_to edit_report_path(report), class: "card-footer-actions__action is-button-simple-md-primary is-block", id: "js-shortcut-edit" do
                   i.fas.fa-pen#new
-              li.thread-edit-tools__item
-                = link_to new_report_path(id: report), class: "thread-edit-tools__item-link is-success" do
+                  | 内容修正
+              li.card-footer-actions__item
+                = link_to new_report_path(id: report), class: "card-footer-actions__action is-button-simple-md-warning is-block" do
                   i.fas.fa-copy#copy
-              li.thread-edit-tools__item
-                = link_to report_path(report), data: { confirm: t("are_you_sure") }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
+                  | コピー
+              li.card-footer-actions__item
+                = link_to report_path(report), data: { confirm: t("are_you_sure") }, method: :delete, class: "card-footer-actions__action is-button-simple-md-danger is-block" do
                   i.fas.fa-trash-alt#delete
+                  | 削除
 
     - if (admin_login? || adviser_login?) && @report.checks.blank?
       .thread-admin-tools
