--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -34,6 +34,11 @@
       = f.label :course_id, class: "a-sm-label is-required"
       .is-button-simple-md-secondary.is-select.is-block
         = f.collection_select :course_id, Course.order(:created_at), :id, :title, {}
+      .auth-form-item__help
+        p
+          | コースの一覧は
+          = link_to "こちら", courses_path, trget: "_blank"
+
     - if params[:role] == "adviser"
       .auth-form-item
         = f.label :description, "自己紹介", class: "a-sm-label"
