--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,6 +1,6 @@
 - content_for(:page_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page")
 
-.auth-form.is-sign-up
+.auth-form.is-sign-up.a-card
   header.auth-form__header
     h1.auth-form__title
       -if params[:role] == "adviser"
