--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -11,22 +11,22 @@ header.page-header
 
 .page-body
   .container
-    .user
-      .user-data
-        .user-data__inner
-          .user-data__main
-            = render "users/profile", user: @user
-          .user-data__sub
-            = render "users/dates", user: @user
-          .user-data__description
-            = simple_format @user.description
+    .user.a-card
+      .user-data__inner
+        .user-data__main
+          = render "users/profile", user: @user
+        .user-data__sub
+          = render "users/dates", user: @user
+        .user-data__description
+          = simple_format @user.description
 
-    - if current_user == @user || current_user.admin?
-      .form-actions
-        ul.form-actions__items
-          - if current_user.admin?
-            li.form-actions__item
-              = link_to "管理者として情報変更", edit_admin_user_path, class: "is-button-simple-lg-secondary"
-          - if current_user == @user
-            li.form-actions__item
-              = link_to "登録情報を変更する", edit_user_path, class: "is-button-simple-lg-warning"
+      - if current_user == @user || current_user.admin?
+        footer.card-footer
+          .card-footer-actions
+            ul.card-footer-actions__items
+              - if current_user.admin?
+                li.card-footer-actions__item
+                  = link_to "管理者として情報変更", edit_admin_user_path, class: "card-footer-actions__action is-button-simple-md-secondary is-block"
+              - if current_user == @user
+                li.card-footer-actions__item
+                  = link_to "登録情報を変更する", edit_user_path, class: "card-footer-actions__action is-button-simple-md-warning is-block"
