デザイン崩れ修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,7 +9,7 @@ header.page-header
     .container
       .row
         .col-lg-6.col-xl-4.col-xs-12
-          .thread-list
+          .thread-list.a-card
             header.thread-list__header
               h2.thread-list__title
                 | 最新のお知らせ
