ユーザー情報編集ページでリタイアにチエックを入れたらリタイア日を記録する

--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -74,12 +74,8 @@
             = f.check_box :adviser, class: "auth-form-checkbox__input"
             = User.human_attribute_name :adviser
     .auth-form-item
-      = f.label :retire, class: "a-sm-label"
-      ul.auth-form-item__checkboxes
-        li.auth-form-checkbox
-          label.auth-form-checkbox__label
-            = f.check_box :retire, class: "auth-form-checkbox__input"
-            = User.human_attribute_name :retire
+      = f.label :retired_on, class: "a-sm-label"
+      = f.text_field :retired_on, class: "datepicker a-text-input"
   .auth-form-action.is-sign-up-action
     ul.auth-form-action__items
       li.auth-form-action__item
