--- a/app/assets/stylesheets/blocks/user/_user_dates.sass
+++ b/app/assets/stylesheets/blocks/user/_user_dates.sass
@@ -7,7 +7,8 @@
 .user-dates__update-at
   +text-block(.8125rem 1.45)
 
-.user-dates__graduated-at
+.user-dates__graduated-at,
+.user-dates__retired-on
   +text-block(.8125rem 1.45)
 
 .user-dates__created-at-label,
@@ -20,12 +21,14 @@
 .user-dates__update-at-value
   display: inline-block
 
-.user-dates__graduated-at-label
-  display: inline-block
-
+.user-dates__graduated-at-label,
 .user-dates__graduated-at-value
   display: inline-block
-  
+
+.user-dates__retired-on-label,
+.user-dates__retired-on-value
+  display: inline-block
+
 .user-dates__active-practices
   display: inline-block
 
