--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -25,7 +25,7 @@
         ul.card-footer-actions__items
           - if correct_answer.blank? && answer != correct_answer && (current_user == question.user || admin_login?)
             li.card-footer-actions__item
-              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: "is-button-simple-sm-warning" do
+              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: "is-button-simple-md-warning is-block" do
                 | 解決にする
           - if answer.user == current_user
             li.card-footer-actions__item
